fix: fix NotFound layout issue

--- a/apps/blog-vite/src/components/NotFound/styles.module.css
+++ b/apps/blog-vite/src/components/NotFound/styles.module.css
@@ -1,4 +1,4 @@
-.not-found {
+.NotFound {
   width: 100%;
   height: 100%;
   display: flex;
